# health-monitor

./: .gitignore  README.md
agent/: config.example.yml  config.go  go.mod  main.go
server/: .env  .env.example  current_code.txt  pyproject.toml  sites.example.json  sites.json
server/app/: alerts.py  db.py  main.py  models.py  settings.py  site_targets.py
