[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-monitor-server"
version = "0.1.0"
description = "FastAPI jumpserver monitor for distributed site health"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
